Add materials and development files to .gitignore
- Exclude materials/ directory (34GB+ of PDFs) from Git tracking
- Exclude public/materials/ directory
- Exclude scripts/ and extraction-reports/ development files
- This resolves Git push issues with large files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Materials - too large for Git
+materials/
+public/materials/
+
+# Development files
+scripts/
+extraction-reports/
