--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Build project
         run: bun run build
 
+      - name: Generate sitemap
+        run: bun run generate-sitemap
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
