--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://engram.kuber.studio",
-  "scripts": {
+  "homepage": "https://engram.kuber.studio",  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "bun run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "generate-sitemap": "node scripts/generate-sitemap.js",
+    "build:with-sitemap": "bun run build && bun run generate-sitemap"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
